Remove app div in HTML

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,5 @@
     <link rel="stylesheet" href="/bundle.css" />
     <script defer src="/bundle.js"></script>
   </head>
-  <body>
-    <div id="app"></div>
-  </body>
+  <body></body>
 </html>
